2003-02-25  David Hyatt  <hyatt@apple.com>

	Fix for bug 3166276.  <tt> uses wrong font size inside a table.
	Make sure logical font values like "medium" don't set the "size
	specified" bit on the font, so that the generic family change
	code will get activated.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-02-25  Darin Adler  <darin@apple.com>

        Reviewed by me, changes by Dave.

        - fixed 3181790 -- REGRESSION: TextRun objects of length 0 or with just the character '\n' leak

        * khtml/rendering/render_text.cpp: (RenderText::position): Destroy the passed-in
        TextRun if it's the kind that's not needed, rather than just returning.

        - fixed 3181794 -- REGRESSION: objects created by RenderObject::createInlineBox leak
        	        
        * khtml/rendering/render_box.cpp: (RenderBox::position): Only do work for replaced
        elements, and for those elements, destroy the passed-in InlineBox. Dave says this
        is not the real solution, but it does plug the leak.
        
        * khtml/rendering/render_flow.cpp: (RenderFlow::createInlineBox): Call through
        to the inherited createInlineBox for all replaced elements. This code was making
        the wrong kind of InlineBox for replaced elements.
        
        - removed Id cvs magic string which causes big headaches in generated files

        * khtml/css/parser.cpp: Removed Id cvs magic string.
        * khtml/css/parser.y: Removed Id cvs magic string.

2003-02-24  David Hyatt  <hyatt@apple.com>

	The new CSS1 parser, implementation of attr(), improvement of
	the content property, impl of the :target selector, and new
	dotted/dashed line drawing code for borders.
	
        Reviewed by darin/gramps

        * ForwardingHeaders/css/css_base.h: Added.
        * WebCore.pbproj/project.pbxproj:
        * khtml/css/Makefile.am:
        * khtml/css/css_base.cpp: Added.
        (StyleBaseImpl::checkLoaded):
        (StyleBaseImpl::stylesheet):