@@ -1,5 +1,17 @@
 2003-02-25  David Hyatt  <hyatt@apple.com>
 
+	Regression caused by my inclusion of inline flows in the bidi 
+	iteration.  These flows are always empty and should be skipped
+	if found at the start of a line.
+
+	The bug # is 3175670.
+	
+        Reviewed by NOBODY (OOPS!).
+
+        * khtml/rendering/bidi.cpp:
+
+2003-02-25  David Hyatt  <hyatt@apple.com>
+
 	Fix for bug 3166276.  <tt> uses wrong font size inside a table.
 	Make sure logical font values like "medium" don't set the "size
 	specified" bit on the font, so that the generic family change
